	different. Sorry about that.

	* Multi-user support (yay!)
	* Per-feed purge preferences (0 means default, negative numbers disable purging)
	* Reworked compact stylesheet support
	* Interactive user preferences editor
	* Per-feed content filters
	* Support for user stylesheets
	* Feed categories
	* "Mark as read" for tags
	* Test button in label editor
	
v1.0.7	(Nov 14, 2005)

	- Implemented catchup (e.g. mark as read) for labels and Starred feed
	- Several new view modes and interface tweaks
	- Label editor now has popup help
	- Reworked preferences editor once again
	- Several bugfixes for issues reported since 1.0.6

v1.0.6	(Oct 13, 2005)

	- Miscellaneous bugfixes since 1.0.5.1, including fairly serious
	  mysql schema bug.

v1.0.5.1	(Sep 24, 2005)

	- Fixes MySQL schema bug of 1.0.5.

v1.0.5	(Sep 23, 2005)

	- Fixes several issues reported since 1.0.4.

v1.0.4	(Sep 12, 2005)

	- "Starred items" virtual feed
	- Experimental support for Gmail-like labels
	- Basic support for Technorati-style tags

v1.0.3.1 (Sep 07, 2005)

	- Last minute bugfixes for 1.0.3

v1.0.3 (Sep 07, 2005)

	- OPML export/import
	- Support for simple content filtering (expression should be valid regexp,
	  checking is case insensitive)
	- Reworked preferences dialog
	- Added ability to mark posts as "starred". These posts are not expired
	  automatically.	  
	- Rework interface using iframes, fixes a lot of scrolling issues.
	
	- Rejoice, kids! Introducing support for MySQL (InnoDB and version 4.1 REQUIRED!)
	
	  Special thanks to Jamie McCarthy who basically shamed me into doing this.

	  Note: Database support could have suffered regressions from many changes 
	  in the code. I need your bugreports and yes - this means YOU! :-)
	
v1.0.2 (Sep 02, 2005)

	- Another bugfix release.

v1.0.1 (Aug 30, 2005)

	- Bugfix release, several issues fixed.

v1.0   (Aug 27, 2005)

	- Limited support for keyboard navigation
	- Feed information editor