@@ -12,6 +12,7 @@ v1.1		(Dec xy, 2005)
 	* Feed categories
 	* "Mark as read" for tags
 	* Test button in label editor
+	* Show number of unread articles in title
 	
 v1.0.7	(Nov 14, 2005)
 
